<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".menu.vistas.menuPokemon">

    <Button
        android:id="@+id/btn_addPokemon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="addPokemon"
        android:text="@string/crear_pokemon"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_borrarPokemon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="borrarPokemon"
        android:text="@string/borrar_pokemon"
        app:layout_constraintEnd_toEndOf="@+id/btn_addPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_addPokemon"
        app:layout_constraintTop_toBottomOf="@+id/btn_addPokemon"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_mostarPokemon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="mostrarPokemon"
        android:text="@string/mostrar_pokemon"
        app:layout_constraintEnd_toEndOf="@+id/btn_borrarPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_borrarPokemon"
        app:layout_constraintTop_toBottomOf="@+id/btn_borrarPokemon"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_salirPokemonMenu"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="salirmenu"
        android:text="@string/salir"
        app:layout_constraintEnd_toEndOf="@+id/btn_mostarPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_mostarPokemon"
        app:layout_constraintTop_toBottomOf="@+id/btn_mostarPokemon"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="265dp"
        android:layout_height="129dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulogrande" />
</androidx.constraintlayout.widget.ConstraintLayout>