<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/funko_fondo"
    tools:context=".menu.vistas.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulo_princi" />

    <EditText
        android:id="@+id/edt_emailregistro"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_passwordregistro"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/edt_emailregistro"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@color/purple_500"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edt_passwordregistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_passwordregistro"
        app:layout_constraintTop_toBottomOf="@+id/edt_passwordregistro"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_regsitro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@color/purple_500"
        android:onClick="registro"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>