<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".menu.vistas.MostrarDetallesPokemonActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="314dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulogrande" />

    <EditText
        android:id="@+id/edt_detalle_idPokemon"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/idpokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edt_detalle_nombrePokemon"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nombre_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_idPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_idPokemon"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_idPokemon"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_detalle_ataquePokemon"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ataque_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_nombrePokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_nombrePokemon"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_nombrePokemon"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_detalle_defensaPokemon"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/defensa_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_ataquePokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_ataquePokemon"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_ataquePokemon"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_detalle_debilidadPokemon"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/debilidad_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_defensaPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_defensaPokemon"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_defensaPokemon"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/img_detalle_fotoPokemon"
        android:layout_width="213dp"
        android:layout_height="114dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_debilidadPokemon"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_debilidadPokemon"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_debilidadPokemon"
        app:srcCompat="@drawable/pokemon" />

    <Button
        android:id="@+id/btn_detalle_actualizarPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="Actualizar_pokemon"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="@+id/img_detalle_fotoPokemon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalle_debilidadPokemon"
        app:layout_constraintTop_toBottomOf="@+id/img_detalle_fotoPokemon"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="salirDetalle"
        android:text="@string/salirDetalle"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalle_debilidadPokemon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_detalle_actualizarPokemon"
        app:layout_constraintTop_toTopOf="@+id/btn_detalle_actualizarPokemon"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>