<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".menu.vistas.editarPokemonActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="286dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titulopokemongo" />

    <EditText
        android:id="@+id/edt_nombrePokemonUpdate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nombre_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/edt_idPokemonEditar"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_ataqueRegistroUpdate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ataque_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombrePokemonUpdate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombrePokemonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombrePokemonUpdate"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_defensaRegistroUpdate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/defensa_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_ataqueRegistroUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_ataqueRegistroUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edt_ataqueRegistroUpdate"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_debilidadPokemonUpdate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/debildad_pokemon"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/edt_defensaRegistroUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_defensaRegistroUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edt_defensaRegistroUpdate"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_imgpokemonUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="updateImagen"
        android:text="@string/imagen"
        app:layout_constraintEnd_toEndOf="@+id/edt_debilidadPokemonUpdate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_pokemonUpdate"
        app:layout_constraintTop_toTopOf="@+id/img_pokemonUpdate"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_pokemonUpdate"
        android:layout_width="153dp"
        android:layout_height="111dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/edt_debilidadPokemonUpdate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_debilidadPokemonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edt_debilidadPokemonUpdate"
        app:srcCompat="@drawable/masterlogo" />

    <Button
        android:id="@+id/btn_updatePokemonUpdate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordes_redondos"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="actualizarPokemon"
        android:text="@string/editar_pokemon"
        app:layout_constraintEnd_toEndOf="@+id/edt_debilidadPokemonUpdate"
        app:layout_constraintStart_toStartOf="@+id/edt_debilidadPokemonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/img_pokemonUpdate"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_idPokemonEditar"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/clave"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:textAlignment="center" />
</androidx.constraintlayout.widget.ConstraintLayout>